@@ -287,7 +287,7 @@ Table of contents</h2>
   </tbody>
 </table>
 
-<h2 id="masking">Mask</h2>
+<h2 id="masking">Layered Masks</h2>
 <h3 id="the-mask-image">The 'mask-image' property</h3>
 
 <table class="propdef">
@@ -437,7 +437,7 @@ img { mask-image: url(#mask), url(resources.svg#mask2) }
 </table>
 
 <p>The 'mask-source-type' property indicates whether the <var>&lt;mask-reference&gt;</var>
-is treated as luminance mask or alpha mask. (See <a href="#MaskValues">Calculating mask values</a>.)</p>
+is treated as luminance mask or alpha mask. (See <a href="#MaskValues">Mask Source values</a>.)</p>
 
 <pre class=prod><dfn><var>&lt;source-type&gt;</var></dfn> = alpha | luminance | auto</pre>
 
@@ -1123,8 +1123,7 @@ of masking operations.</p>
 there were no mask but instead the alpha channel of the given object
 were multiplied with the mask's resulting mask values.</p>
 
-
-<h2>Mask Box Image</h2>
+<h2>Box-Image Masks</h2>
 
 <p>
   With 'mask-box-image' a mask can be split into nine pieces: four corners, four
