@@ -1,3 +1,6 @@
+2013-04-04  Dirk Schulze  <dschulze@adobe.com>
+	Change titles from Mask to Layered Masks and Mask Box Image to Box-Image Masks.
+
 2013-04-03  Dirk Schulze  <dschulze@adobe.com>
 	Move section 'The Mask Image Rendering Model' to 'Mask'
 
